# spriterGM

./: Android.mk  Application.mk  CMakeLists.txt  LICENSE  README.md  build.gradle
SpriterGM.gmx/: SpriterGM.project.gmx  help.rtf  spriterGM.gmez
SpriterGM.gmx/Configs/: Default.config.gmx
SpriterGM.gmx/extensions/: spriterGM.extension.gmx
SpriterGM.gmx/objects/: control.object.gmx  spriterModel_box.object.gmx  spriterModel_image.object.gmx  spriterModel_instance.object.gmx  spriterModel_point.object.gmx  spriterPlayerModel1.object.gmx  spriterPlayerModel2.object.gmx  spriterPlayerModel3.object.gmx  spriter_Global.object.gmx  text.object.gmx  text_var.object.gmx
SpriterGM.gmx/rooms/: room0.room.gmx
SpriterGM.gmx/scripts/: get_next.gml  is_zero.gml  matrix_2D_create.gml  matrix_2D_identity.gml  matrix_2D_orientate.gml  matrix_2D_pretranslate.gml  matrix_2D_rotate.gml  matrix_2D_scale.gml  matrix_2D_translate.gml  matrix_2D_x_multiply.gml  matrix_2D_y_multiply.gml  spriter_animation_just_finished.gml  spriter_apply_character_map.gml  spriter_check_errors.gml  spriter_create_instance.gml  spriter_destroy.gml  (+77 more)
SpriterGM_StressTest.gmx/: SpriterGM_StressTest.project.gmx  help.rtf
android-studio/: settings.gradle
doc/: index.html
extension/: spriterGM.gmez
nlohmann-json/: CMakeLists.txt
output/: cmake_emscripten.bat  cmake_vs2015.bat  cmake_vs2017.bat  java_native.bat  ndk_build.bat
src/: android_fopen.c  com_libspritergm_spriterGMNative.h  gmatlasfile.cpp  gmatlasfile.h  gmboneinstanceinfo.cpp  gmboneinstanceinfo.h  gmboxinstanceinfo.cpp  gmboxinstanceinfo.h  gmfilefactory.cpp  gmfilefactory.h  gmimagefile.cpp  gmimagefile.h  gmobjectfactory.cpp  gmobjectfactory.h  gmpointinstanceinfo.cpp  gmpointinstanceinfo.h  gmsoundfile.cpp  gmsoundfile.h  gmsoundobjectinforeference.cpp  gmsoundobjectinforeference.h  gmtriggerobjectinfo.cpp  gmtriggerobjectinfo.h  jsonspriterfileattributewrapper.cpp  jsonspriterfileattributewrapper.h  jsonspriterfiledocumentwrapper.cpp  jsonspriterfiledocumentwrapper.h  jsonspriterfileelementwrapper.cpp  jsonspriterfileelementwrapper.h  maindll.cpp  maindll.h  mainjni.cpp  mainjni.h  pugixmlspriterfileattributewrapper.cpp  pugixmlspriterfileattributewrapper.h  pugixmlspriterfiledocumentwrapper.cpp  pugixmlspriterfiledocumentwrapper.h  pugixmlspriterfileelementwrapper.cpp  pugixmlspriterfileelementwrapper.h  spriterGM.cpp  spriterGM.h  (+6 more)
(+108 files in other folders)
